package edu.fiuba.algo3.modelo.gameboard;

public class Dirt extends Plot{
    public Dirt(){state = new Available();}

}
